tests/diagnostics/cases/parse/11_anon_struct_missing_brace.home.expected
<repo>/tests/diagnostics/cases/parse/11_anon_struct_missing_brace.home:7:1: error[EP0001]: Expected '}' after struct fields

1 parse error(s) found
Checking: <repo>/tests/diagnostics/cases/parse/11_anon_struct_missing_brace.home

Success: Type checking passed ✓
